# datadiag

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/datadiag/: __init__.py  datadiag.py  report.py
tests/: test_datadiag.py
