[tool.poetry]
name = "datadiag"
version = "0.1.0"
description = "Diagnose common issues for pandas DataFrame datasets."
authors = ["Kevin Perez Garcia"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
openpyxl = ">=3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
